# RideCastSink

./: settings.gradle
CastSink/: CMakeLists.txt  build.gradle
CastSink/dependencies/include/: vlc_access.h  vlc_addons.h  vlc_aout.h  vlc_bits.h  vlc_codec.h  vlc_codecs.h  vlc_common.h  vlc_config_cat.h  vlc_demux.h  vlc_es.h  vlc_events.h  vlc_filter.h  vlc_fingerprinter.h  vlc_http.h  vlc_image.h  vlc_input.h  vlc_input_item.h  vlc_interrupt.h  vlc_keystore.h  vlc_media_source.h  vlc_picture.h  vlc_picture_fifo.h  vlc_picture_pool.h  vlc_player.h  vlc_playlist.h  vlc_renderer_discovery.h  vlc_services_discovery.h  vlc_sout.h  vlc_spu.h  vlc_stream.h  vlc_subpicture.h  vlc_tls.h  vlc_video_splitter.h  vlc_viewpoint.h  vlc_vlm.h  vlc_vout.h  vlc_vout_display.h  vlc_vout_window.h  vlc_vout_wrapper.h
CastSink/src/main/: AndroidManifest.xml
CastSink/src/main/java/com/ridehome/castsink/: CastSinkSDK.java
CastSink/src/main/java/com/ridehome/castsink/streamplayer/: StreamPlayer.java
CastSink/src/main/java/com/ridehome/castsink/wifip2p/: ReceiveSocket.java  WifiP2PController.java  Wifip2pActionListener.java  Wifip2pReceiver.java  Wifip2pService.java
CastSink/src/main/jni/: StreamPlayer.c  libvlcjni-vlcobject.h  yyl_log.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  live555player_jni.cpp  logs.h
app/src/main/jni/live555/: live555.cpp  live555.h
castsinktestapp/: build.gradle
castsinktestapp/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
libvlc/src/main/cpp/: yyl_record.c
(+28 files in other folders)
